Another changes for mobile view.

--- a/index.html
+++ b/index.html
@@ -73,54 +73,54 @@
         </div>
 
     </section>
-    <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title" >About Me</h1>
-      <br>
-      <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assests/profile-pic-2.jpg"
-            alt="Profile picture"
-            class="about-pic"
-            style="width: 300px; height:500px;"
-          />
+<section id="about">
+  <p class="section__text__p1">Get To Know More</p>
+  <h1 class="title" >About Me</h1>
+  <br>
+  <div class="section-container">
+    <div class="section__pic-container about-pic-container">
+      <img
+        src="./assests/profile-pic-2.jpg"
+        alt="Profile picture"
+        class="about-pic"
+      />
+    </div>
+    <div class="about-details-container">
+      <div class="text-container">
+        <!-- The inline style was removed from this <p> tag -->
+        <p class="about-me-text">
+          I'm <b>Pavan</b>, and I see the digital world as a series of fascinating puzzles. From decoding vast datasets to anticipating security threats, I thrive on bringing order to chaos. I believe that true progress happens when we not only build amazing tools but also ensure they can be used safely and effectively. My goal is to be the person who untangles the technical knots, so others can work efficiently and confidently.
+        </p>
+      </div>
+      <div class="about-containers" style="margin-top: 2rem;">
+        <div class="details-container">
+          <h3>Areas of Focus</h3>
+          <ul>
+            <li>Data Analysis & Visualization</li>
+            <li>AI & Cybersecurity Research</li>
+            <li>ETL & Data Pipelines</li>
+            <li>Cloud & Big Data</li>
+          </ul>
         </div>
-        <div class="about-details-container">
-          <div class="text-container">
-            <p style="font-size: 24px;">
-              I'm <b>Pavan</b> 👨‍💻, and I see the digital world 🌐 as a series of fascinating puzzles 🧩. From decoding vast datasets 📊 to anticipating security threats 🔐, I thrive on bringing order to chaos ⚙️. I believe that true progress happens when we not only build amazing tools 🛠️ but also ensure they can be used safely and effectively ✅. My goal is to be the person who untangles the technical knots 🔗, so others can work efficiently and confidently 💡.
-            </p>
-          </div>
-          <div class="about-containers" style="margin-top: 2rem;">
-            <div class="details-container">
-              <h3>Areas of Focus</h3>
-              <ul>
-                <li>Data Analysis & Visualization</li>
-                <li>AI & Cybersecurity Research</li>
-                <li>ETL & Data Pipelines</li>
-                <li>Cloud & Big Data</li>
-              </ul>
-            </div>
-            <div class="details-container">
-              <h3>Personal Interests</h3>
-              <ul>
-                <li>Cooking & Formula 1</li>
-                <li>Cricket & Bowling</li>
-                <li>Novel Reading</li>
-                <li>Anime & Manga</li>
-              </ul>
-            </div>
-          </div>
+        <div class="details-container">
+          <h3>Personal Interests</h3>
+          <ul>
+            <li>Cooking & Formula 1</li>
+            <li>Cricket & Bowling</li>
+            <li>Novel Reading</li>
+            <li>Anime & Manga</li>
+          </ul>
         </div>
       </div>
-      <img
-        src="./assests/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
-    </section>
+    </div>
+  </div>
+  <img
+    src="./assests/arrow.png"
+    alt="Arrow icon"
+    class="icon arrow"
+    onclick="location.href='./#experience'"
+  />
+</section>
     
     <section id="experience">
       <p class="section__text__p1">My Recent</p>
