The hamburger edit where I forget to add the photos link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
             <li><a href="#skills" onclick="toggleMenu()">Professional Skills</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#photos" onclick="toggleMenu()"">Some of my Photos</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
           </div>
         </div>
