--- a/index.html
+++ b/index.html
@@ -328,21 +328,22 @@
       <p class="section__text__p1">Some of My</p>
       <h1 class="title">Photos</h1>
       <div class="photo-gallery-container">
-        <div class="gallery-item"><img src="./assests/1.jpg" alt="Gallery photo 1"></div>
+
+<!--        <div class="gallery-item"><img src="./assests/1.jpg" alt="Gallery photo 1"></div>
         <div class="gallery-item"><img src="./assests/3.jpg" alt="Gallery photo 3"></div>
         <div class="gallery-item"><img src="./assests/2.jpg" alt="Gallery photo 2"></div>        
         <div class="gallery-item"><img src="./assests/4.jpg" alt="Gallery photo 4"></div>
-        <div class="gallery-item"><img src="./assests/5.jpg" alt="Gallery photo 5"></div>
+        <div class="gallery-item"><img src="./assests/5.jpg" alt="Gallery photo 5"></div>-->
         <div class="gallery-item"><img src="./assests/6.jpg" alt="Gallery photo 6"></div>
         <div class="gallery-item"><img src="./assests/7.jpg" alt="Gallery photo 7"></div>
         <div class="gallery-item"><img src="./assests/award.jpg" alt="Gallery photo 8"></div>
         <div class="gallery-item"><img src="./assests/award_w_drmitra.jpg" alt="Gallery photo 9"></div>        
-        <div class="gallery-item"><img src="./assests/kurta.jpg" alt="Gallery photo 10"></div>
-        <div class="gallery-item"><img src="./assests/frnds1.jpg" alt="Gallery photo 11"></div>
         <div class="gallery-item"><img src="./assests/DSC06875.JPG" alt="Gallery photo 12"></div>
-        <div class="gallery-item"><img src="./assests/mult_falls1.jpg" alt="Gallery photo 13"></div>
         <div class="gallery-item"><img src="./assests/grad_with_drmitra.jpg" alt="Gallery photo 14"></div>
-        <div class="gallery-item"><img src="./assests/Headshot 2.jpg" alt="Gallery photo 15"></div>
+<!--    <div class="gallery-item"><img src="./assests/kurta.jpg" alt="Gallery photo 10"></div>
+        <div class="gallery-item"><img src="./assests/frnds1.jpg" alt="Gallery photo 11"></div>
+        <div class="gallery-item"><img src="./assests/mult_falls1.jpg" alt="Gallery photo 13"></div>
+        <div class="gallery-item"><img src="./assests/Headshot 2.jpg" alt="Gallery photo 15"></div>-->
       </div>
       <img
         src="./assests/arrow.png"
@@ -386,7 +387,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 NPSCB. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 NPSCB. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
     </body>
