Resolved an issue
I found that the area of focus aren't redirecting as they are supposed to. so i created ids for each division in the projects section.

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <div class="details-container">
           <h3>Areas of Focus</h3>
           <ul class="focus-list">
-            <li><a href="#project-healthcare">Data Analysis & Visualization</a></li>
+            <li><a href="#healthcare">Data Analysis & Visualization</a></li>
             <li><a href="#projects">AI & Cybersecurity Research</a></li>
-            <li><a href="#project-healthcare">ETL & Data Pipelines</a></li>
+            <li><a href="#healthcare">ETL & Data Pipelines</a></li>
             <li>Cloud & Big Data</li>
           </ul>
         </div>
@@ -233,7 +233,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <!-- Project 1: Accessible Cybersecurity Education -->
-          <div class="details-container color-container">
+          <div class="details-container color-container" id="caine_paper">
             <div class="article-container">
               <img src="./assests/Filtered_Prompt tree_.png" alt="Project 1" class="project-img"/>
             </div>
@@ -247,7 +247,7 @@
             </div>
           </div>
           <!-- Project 2: LLM Embeddings for Cybersecurity -->
-          <div class="details-container color-container">
+          <div class="details-container color-container" id="acmse">
             <div class="article-container">
               <img src="./assests/LLM_embeddings_architecture.png" alt="Project 2" class="project-img"/>
             </div>
@@ -261,7 +261,7 @@
             </div>
           </div>
           <!-- Project 3: Master's Thesis: Prompt Tree -->
-          <div class="details-container color-container">
+          <div class="details-container color-container" id="thesis">
             <div class="article-container">
               <img src="./assests/Prompt_Tree.png" alt="Project 3" class="project-img"/>
             </div>
@@ -277,7 +277,7 @@
         </div>
         <div class="about-containers">
           <!-- Project 4: Healthcare Access Analyzer -->
-          <div class="details-container color-container">
+          <div class="details-container color-container" id="healthcare">
             <div class="article-container">
               <img src="./assests/Health_care.png" alt="Project 4" class="project-img"/>
             </div>
@@ -306,7 +306,7 @@
           </div>
           -->
           <!-- Project 6: Phishing Keylogger -->
-          <div class="details-container color-container">
+          <div class="details-container color-container" id="pk">
             <div class="article-container">
               <img src="./assests/pk2.png" alt="Project 6" class="project-img"/>
             </div>
